# fastapy-project

./: .gitignore  pyproject.toml
app/: main.py
tests/: test_app.py
