[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.123.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = [
    "E",
    "F",
    "I",
    "W",
    "PL",
    "PT"
]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.pytest.ini_options]
pythonpath = "."	
addopts = '-p no:warnings'
testpaths = ["tests"]

[tool.taskipy.tasks]
run = "uv run fastapi dev"
pre_test = "task lint"
test = "pytest --cov=app -vv"
post_test = "coverage html"
lint = "ruff check . && ruff format . --diff"
format = "ruff check . --fix && ruff format ."
